2006-04-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* lwlib-fonts.c: Change #include to "font-mgr.h".  Make
	conditional on HAVE_FONTCONFIG, not USE_XFT.

2006-03-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.26 "endive" is released.

2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2005-12-21  Andrey Slusar  <anrays@gmail.com>

	* xlwmenu.c (make_drawing_gcs): Fix build with gcc 2.95.

2005-12-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.24 "dandelion" is released.

2005-11-26  Stephen J. Turnbull  <stephen@xemacs.org>

	Merge Xft.

    2005-11-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* lwlib-colors: Improve comments.
	
    2005-11-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* lwlib-colors: Remove or comment out dead code.
	
    2005-09-26 Olivier Galibert   <galibert@xemacs.org>

	* xlwmenu.c:
	* xlwmenuP.h:
	Give USE_XFT_MENUBARS priority over USE_MOTIF.

    2005-09-06  Stephen J. Turnbull  <stephen@xemacs.org>

	* lwlib-fonts.c (xft_open_font_by_name): Fix heuristic for XLFDs.

	* xlwmenu.c (string_draw_range): Recommend persistent xftDraw.

    2005-09-02  Daniel Pittman <daniel@rimspace.net>

	* lwlib-fonts.c (xft_open_font_by_name): Eliminate code to avoid
	use of scaled fonts (probably bogus, anyway).  Add error message
	in case of fatal failure to find any fonts at all.
	<87ll2fucw1.fsf@rimspace.net>

	* xlwmenu.c (string_draw_range): Plug leak of XftDraw.

    2005-03-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* xlwtabs.c (TabsGeometryManager): Fix "fat fingers" mistake.

    2005-03-07  Stephen J. Turnbull  <stephen@xemacs.org>

	* lwlib-Xaw.c (debug_gauge): Fix and suppress gauge debug message.

	* xlwtabs.c (TabsGeometryManager): Suppress "kludging" message, too.
	(TabsGeometryManager): Make straight the paths of the layout, or
	at least improve the approximation to Xt conventions by 50%.

    2005-02-22  Stephen J. Turnbull  <stephen@xemacs.org>
